unpackaged/main/default/objects/CMPL123TMS__User_Quiz_Answer__c/CMPL123TMS__User_Quiz_Answer__c.object-meta.xml
<CustomObject>
    <description>User Quiz Answer</description>
    <label>User Quiz Answer</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Quiz Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User  Quiz Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>