unpackaged/main/default/objects/CMPL123TMS__User_Quiz_Answer__c/fields/CMPL123TMS__Answer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>