unpackaged/main/default/objects/CMPL123TMS__User_Quiz_Answer__c/fields/CMPL123TMS__Quiz_Item__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Quiz_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quiz Item</label>
        <referenceTo>CMPL123TMS__Quiz_Item__c</referenceTo>
        <relationshipName>Quiz_Answers</relationshipName>
        <type>Lookup</type>
    </CustomField>