unpackaged/main/default/objects/CMPL123TMS__User_Quiz_Answer__c/fields/CMPL123TMS__Training_Record_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Record ID</label>
        <referenceTo>CMPL123TMS__Training_Record__c</referenceTo>
        <relationshipName>Quiz_Answers</relationshipName>
        <type>Lookup</type>
    </CustomField>